src/objects/Weekly_Performance__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Satisfaction_Percentage__c</fullName>
        <label>Customer Satisfaction Percentage</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Weekly Performance</relationshipLabel>
        <relationshipName>Weekly_Performance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Week_Start_Date__c</fullName>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <label>Weekly Performance</label>
    <nameField>
        <displayFormat>WP-{0000}</displayFormat>
        <label>Weekly Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>